<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.ContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/sofia"
            android:text="Preguntas\nfrecuentes"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:paddingStart="60dp"
                    android:paddingEnd="100dp"
                    android:background="@drawable/white_round_bg"
                    android:backgroundTint="#242424">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq1_title"
                        android:textColor="@color/baudo_yellow"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq1_content"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:paddingStart="60dp"
                    android:paddingEnd="100dp"
                    android:background="@drawable/white_round_bg"
                    android:backgroundTint="#242424">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq2_title"
                        android:textColor="@color/baudo_yellow"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq2_content"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:paddingStart="60dp"
                    android:paddingEnd="100dp"
                    android:background="@drawable/white_round_bg"
                    android:backgroundTint="#242424">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq3_title"
                        android:textColor="@color/baudo_yellow"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq3_content"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:paddingStart="60dp"
                    android:paddingEnd="100dp"
                    android:background="@drawable/white_round_bg"
                    android:backgroundTint="#242424">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq4_title"
                        android:textColor="@color/baudo_yellow"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq4_content"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:paddingStart="60dp"
                    android:paddingEnd="100dp"
                    android:background="@drawable/white_round_bg"
                    android:backgroundTint="#242424">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq5_title"
                        android:textColor="@color/baudo_yellow"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofia"
                        android:text="@string/faq5_content"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>